--- a/backend/business/templates/index.html
+++ b/backend/business/templates/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
 
-
+    <!-- Your page content goes here -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
